<resources>
    <string name="app_name">MoneyMate</string>
    <string name="Logo">MoneyMate</string>
    <string name="LoginHeading">Login</string>
    <string name="Uname">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="CPassword">Confirm Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Signup</string>
    <string name="signupText">Don\'t Have An Account?</string>
    <string name="loginText">Already Have An Account?</string>
    <string name="signupLink">SignUp</string>
    <string name="loginLink">Login</string>
    <string name="signupHeading">SIGN UP</string>
    <string name="homeHeading">Welcome</string>
    <string name="openAccount">Open An Account</string>
    <string name="transferMoney">Transfer Money</string>
    <string name="checkBalance">Check Balance</string>
    <string name="checkTransactionDetail">Check Transcation Detail</string>
    <string name="requestDebit">Request For Debit Card</string>
    <string name="requestCheque">Request For Cheque Book</string>
    <string name="accountInfo">Show Account Information</string>
    <string name="logout">Logout</string>
    <string name="accountOpenHeading">BANK ACCOUNT OPENING FORM</string>
    <string name="name">Name</string>

    <string name="account_type">Account Type</string>
    <string name="staff_logo">Staff Logo</string>
    <string name="login_as_user">Login As User</string>
    <string name="staff_login_heading">Staff Login</string>
    <string name="Dashboard_User">User</string>
    <string name="staff_dashboard_heading">Staff Dashboard</string>
    <string name="login_as_staff">Login As Staff</string>
    <string name="add_staff">Add Staff</string>
    <string name="user_detail">User Detail</string>
    <string name="bank_account_requests">Bank Account Requests</string>
    <string name="deposit">Deposit</string>
    <string name="add_staff_member">Add Staff Member</string>
    <string name="change_password">Change Password</string>
    <string name="deactivated_bank_account">Deactivated Bank Account</string>
    <string name="withdraw">Withdraw</string>
    <string name="bank_account_detail">Bank Account Detail</string>
    <string name="debit_card_requests">Debit Card Requests</string>
    <string name="cheque_book_requests">Cheque Book Requests</string>
    <string name="update_bank_account_detail">Update Bank Account Detail</string>

    <string name="request_id">Request ID: %1$s</string>
    <string name="account_id">Account ID: %1$s</string>
</resources>
