<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/signupHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupHeading"
        android:textSize="48sp"
        app:fontFamily="sans-serif-black"/>

    <EditText
        android:id="@+id/unametxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Uname"
        android:importantForAutofill="no"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/emailtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"
        android:importantForAutofill="no"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/passwordtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:importantForAutofill="no"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/cpasswordtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/CPassword"
        android:importantForAutofill="no"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/btnTextColor"
        android:text="@string/SignupBtn" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/blackText"
            android:textSize="16sp"
            android:text="@string/loginText"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loginLink"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            />
    </LinearLayout>
</LinearLayout>