<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".StaffLoginActivity"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp">


        <TextView
            android:id="@+id/loginHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staff_login_heading"
            android:textSize="48sp"
            app:fontFamily="sans-serif-black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/staffLogo"
            android:layout_width="152dp"
            android:layout_height="139dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/staff_logo"
            app:layout_constraintBottom_toTopOf="@+id/unametxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginHeading"
            app:srcCompat="@drawable/staff" />

        <EditText
            android:id="@+id/unametxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="36dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Uname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/staffLogo"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/passwordtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="36dp"
            android:ems="10"
            android:hint="@string/Password"
            app:layout_constraintBottom_toTopOf="@+id/loginbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unametxt"
            app:layout_constraintVertical_bias="0.447"
            android:importantForAutofill="no"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/staffloginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/signup_login_btn"
            android:text="@string/LoginBtn"
            android:textColor="@color/btnTextColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/userLoginLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:text="@string/login_as_user"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="36sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>