<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="413dp"
                android:layout_height="194dp"
                android:src="@drawable/bg_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="144dp"
                android:layout_height="116dp"
                android:src="@drawable/profile_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="User"
                android:textColor="@color/whiteText"
                android:textSize="32sp"
                app:fontFamily="serif"
                app:layout_constraintBottom_toBottomOf="@+id/imageView1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/open_account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/openAccount"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/whiteText"
            app:fontFamily="serif"
            android:drawableTop="@drawable/ic_account_balance_black_24dp"
            android:textSize="18sp"
            android:padding="12sp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"/>

        <Button
            android:id="@+id/transfer_money_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transferMoney"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/whiteText"
            app:fontFamily="serif"
            android:drawableTop="@drawable/ic_transfer_money"
            android:textSize="18sp"
            android:padding="12dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
           />

        <Button
            android:id="@+id/check_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBalance"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/whiteText"
            app:fontFamily="serif"
            android:textSize="18sp"
            android:drawableTop="@drawable/ic_account_balance"
            android:padding="12dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"/>

        <Button
            android:id="@+id/check_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkTransactionDetail"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/whiteText"
            app:fontFamily="serif"
            android:drawableTop="@drawable/ic_transaction"
            android:textSize="18sp"
            android:padding="12dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"/>

        <Button
            android:id="@+id/request_debit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requestDebit"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/whiteText"
            app:fontFamily="serif"
            android:drawableTop="@drawable/ic_debit"
            android:textSize="18sp"
            android:padding="12sp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"/>

        <Button
            android:id="@+id/request_cheque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requestCheque"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/whiteText"
            app:fontFamily="serif"
            android:drawableTop="@drawable/ic_cheque"
            android:textSize="18sp"
            android:padding="12sp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"/>

        <Button
            android:id="@+id/account_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountInfo"
            android:drawableTop="@drawable/ic_account_info"
            android:padding="12dp"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/whiteText"
            app:fontFamily="serif"
            android:textSize="18sp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"/>

        <Button
            android:id="@+id/changepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/whiteText"
            app:fontFamily="serif"
            android:drawableTop="@drawable/ic_change_password"
            android:textSize="18sp"
            android:padding="12sp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"/>

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/whiteText"
            app:fontFamily="serif"
            android:drawableTop="@drawable/ic_logout"
            android:textSize="18sp"
            android:padding="12sp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"/>
    </LinearLayout>

</ScrollView>
