<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".SignupActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="162dp">

            <ImageView
                android:id="@+id/bg_circle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bg_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/addStaffHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_staff"
                android:textColor="@color/whiteText"
                android:textSize="48sp"
                app:fontFamily="sans-serif-black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.367" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/unametxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Uname"
            android:importantForAutofill="no"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/emailtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/Email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:importantForAutofill="no"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/cpasswordtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/CPassword"
            android:importantForAutofill="no"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="12dp"/>
        <Button
            android:id="@+id/addstaffbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="40dp"
            android:background="@drawable/signup_login_btn"
            android:textColor="@color/btnTextColor"
            android:text="@string/add_staff" />
    </LinearLayout>
</ScrollView>